# hello-esp32c3

./: .gitignore  Cargo.toml  flake.nix
.cargo/: config.toml
src/: main.rs
