[package]
name = "hello-esp32c3"
version = "0.1.0"
authors = ["Knarkzel <knarkzel@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
esp-idf-sys = { version = "0.33", features = ["binstart"] }

[build-dependencies]
embuild = "0.31"

[patch.crates-io]
esp-idf-sys = { git = "https://github.com/knarkzel/esp-idf-sys.git", branch = "hailey" }
embuild = { git = "https://github.com/haileys/embuild.git", branch = "esp-idf-no-git-repo" }
